--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ application/logs/
 application/cache/
 application/config/base.php
 application/config/development/database.php
+application/config/production/database.php
