--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ application/cache/
 application/config/base.php
 application/config/development/database.php
 application/config/production/database.php
+.htaccess
